--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,10 @@
   "version": 2,
   "builds": [
     {
-      "src": "public//*",
-      "use": "@vercel/static"
+      "src": "./index.hmtl",
+      "use": "@vercel/node"
     }
   ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
-  ]
+
+  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
